<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFF6DB"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/hint_X1"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextNumberDecimal2"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/hint_X2"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextNumberDecimal3"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/hint_XS"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextNumberDecimal4"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/hint_Z"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />


    <EditText
        android:id="@+id/editTextNumberDecimal5"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/hint_A"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="8dp"
        android:text="@string/X1"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberDecimal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="352dp"
        android:text="@string/X2"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimal"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="352dp"
        android:text="@string/XS"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimal2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="95dp"
        android:layout_height="24dp"
        android:layout_marginTop="300dp"
        android:text="@string/limits_along_X"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="95dp"
        android:layout_height="24dp"
        android:layout_marginTop="300dp"
        android:text="@string/step"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="476dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Z"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberDecimal4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="476dp"
        android:text="@string/A"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimal4"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/function_parameters"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="70dp"
        android:text="@string/result"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />


    <Button
        android:id="@+id/button_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal5" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/save"
        app:layout_constraintEnd_toStartOf="@+id/button_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_calc" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_calc" />

    <Button
        android:id="@+id/button_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/load"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_clear"
        app:layout_constraintTop_toBottomOf="@+id/button_calc" />

    <ScrollView
        android:layout_width="300dp"
        android:layout_height="174dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:gravity="center_horizontal"
            tools:ignore="TextSizeCheck" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

